<resources>
    <string name="app_name">Simple_Calculator</string>
    <string name="ac">AC</string>
    <string name="_0">0</string>
    <string name="x">x</string>
    <string name="slash">/</string>
    <string name="point">.</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="_zero">0</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="off">OFF</string>
    <string name="del">DEL</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="on">ON</string>
    <string name="dash">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
</resources>