<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:padding="20dp">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/_0"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="60sp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35dp"
        android:layout_above="@+id/nums"/>
    
    <LinearLayout
        android:id="@+id/nums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:baselineAligned="false">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            
            <Button
                android:id="@+id/on"
                android:text="@string/on"
               style="@style/Button1"/>

            <Button
                android:id="@+id/num7"
                android:text="@string/_7"
                style="@style/Button2" />

            <Button
                android:id="@+id/num4"
                android:text="@string/_4"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num1"
                android:text="@string/_1"
                style="@style/Button2"/>
            <Button
                android:id="@+id/delete"
                android:text="@string/del"
                style="@style/Button1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/off"
                android:text="@string/off"
                style="@style/Button1"/>

            <Button
                android:id="@+id/num8"
                android:text="@string/_8"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num5"
                android:text="@string/_5"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num2"
                android:text="@string/_2"
                style="@style/Button2"/>

            <Button
                android:id="@+id/num0"
                android:text="@string/_zero"
                style="@style/Button2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/ac"
                android:text="@string/ac"
                style="@style/Button1"/>
            <Button
                android:id="@+id/num9"
                android:text="@string/_9"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num6"
                android:text="@string/_6"
                style="@style/Button2"/>
            <Button
                android:id="@+id/num3"
                android:text="@string/_3"
                style="@style/Button2"/>
            <Button
                android:id="@+id/dot"
                android:text="@string/point"
                style="@style/Button2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/devide"
                android:text="@string/slash"
                style="@style/Button1"/>
            <Button
                android:id="@+id/multiply"
                android:text="@string/x"
                style="@style/Button1"/>
            <Button
                android:id="@+id/subtraction"
                android:text="@string/dash"
                style="@style/Button1"/>
            <Button
                android:id="@+id/add"
                android:text="@string/plus"
                style="@style/Button1"/>
            <Button
                android:id="@+id/equal"
                android:text="@string/equal"
                style="@style/Button1"/>
        </LinearLayout>




        

            


    </LinearLayout>

</RelativeLayout>